src/objects/Group_Buy_Proposal__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Group Buy Proposal</relationshipLabel>
        <relationshipName>Group_Buy_Proposal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approximate_Deliver_Start_Date__c</fullName>
        <label>Approximate Deliver Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>1500</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Max_Quota__c</fullName>
        <label>Max Quota</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Quota__c</fullName>
        <label>Min Quota</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Group Buy Proposal</relationshipLabel>
        <relationshipName>Group_Buy_Proposal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Immediate Payment</fullName>
                </value>
                <value>
                    <fullName>Payment After Reach Quota</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Group Buy Proposal</label>
    <nameField>
        <label>Group Buy Proposal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Group Buy Proposal</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>